# homework_liangchen

./: .gitignore  README.md  anthropic.py  demo.py  pyproject.toml
llm_fluent/: __init__.py  extract_utils.py  extractor.py  prompt.py
llm_fluent/backends/: anthropic.py  base.py  openai.py
src/llm_fluent/: __init__.py  extractor.py  prompt.py
src/llm_fluent/backends/: anthropic.py  base.py
tests/: test_backends.py  test_extractor.py  test_prompt.py
