# pyproject.toml
[tool.poetry]
name = "llm-fluent"
version = "0.1.0"
description = "A fluent-style LLM prompting and response transformation library."
authors = ["Meng Cao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.14.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
python-dotenv = "^1.0.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"