[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_fluent"
version = "0.1.0"
description = "A fluent API for interacting with large language models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Meng Cao", email = "meng.cao@mail.mcgill.ca" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "anthropic",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]